--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^5.3.3",
     "styled-icons": "^10.45.0",
     "typescript": "^4.6.2",
+    "vercel": "^24.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
